# gistit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Procfile  README.md  configure.in  gistit.c  package-lock.json  package.json
src/: config.h.in  filelist.c  filelist.h  gistit.c  github.c  github.h
web/: gistit.js
web/public/css/: app.css
web/views/: index.jade
